--- a/SubWoo/Main.storyboard
+++ b/SubWoo/Main.storyboard
@@ -1,27 +1,113 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="v9j-Pg-jvS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0hW-E7-hdu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="VzS-Xy-s0u">
+        <scene sceneID="hwm-EQ-neq">
             <objects>
-                <viewController id="v9j-Pg-jvS" sceneMemberID="viewController">
+                <viewController id="5UI-rg-APc" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="qkV-Pk-Aie"/>
-                        <viewControllerLayoutGuide type="bottom" id="knf-lb-zmA"/>
+                        <viewControllerLayoutGuide type="top" id="9cJ-eH-uA0"/>
+                        <viewControllerLayoutGuide type="bottom" id="hjF-bL-sOI"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="m53-jK-b0O">
+                    <view key="view" contentMode="scaleToFill" id="9T0-lP-rQP">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6v-kL-UKr">
+                                <rect key="frame" x="90" y="95" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="ggN-DL-21m" kind="show" id="gge-EW-pdR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.52156862749999999" green="0.72941176470000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="wa0-rp-W6k"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nO1-tb-gcv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="92v-a8-ZLe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="265" y="9"/>
+            <point key="canvasLocation" x="1661" y="-118"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Kx4-Hd-ahR">
+            <objects>
+                <viewController id="ggN-DL-21m" customClass="SWViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1v6-zI-oLp"/>
+                        <viewControllerLayoutGuide type="bottom" id="IBx-F4-qB7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Bx-KO-cb7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hs9-eU-lWf">
+                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d32-yV-tsa">
+                                        <rect key="frame" x="257" y="16" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <segue destination="b3c-GK-f50" kind="show" id="BxS-qn-Rvh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Hs9-eU-lWf" firstAttribute="leading" secondItem="9Bx-KO-cb7" secondAttribute="leadingMargin" id="2tN-HF-QZq"/>
+                            <constraint firstItem="Hs9-eU-lWf" firstAttribute="top" secondItem="1v6-zI-oLp" secondAttribute="bottom" id="Coa-uA-uVx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Hs9-eU-lWf" secondAttribute="trailing" id="cCa-Et-foT"/>
+                            <constraint firstItem="IBx-F4-qB7" firstAttribute="top" secondItem="Hs9-eU-lWf" secondAttribute="bottom" id="sTd-MB-JyS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="bkd-06-KYy"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="485-VD-8ce" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2354" y="-118"/>
+        </scene>
+        <!--Test View Controller-->
+        <scene sceneID="Yd2-UT-qd6">
+            <objects>
+                <viewController id="b3c-GK-f50" customClass="SWTestViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VGE-cW-P4K"/>
+                        <viewControllerLayoutGuide type="bottom" id="94M-qY-slu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yHj-fC-611">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G3f-Ny-aPp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3058" y="-118"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IeD-p4-esH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0hW-E7-hdu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1dW-0P-s6J">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5UI-rg-APc" kind="relationship" relationship="rootViewController" id="vkr-no-UdF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qEa-bU-mgE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="849" y="-118"/>
         </scene>
     </scenes>
 </document>
